--- a/build.gradle
+++ b/build.gradle
@@ -51,6 +51,7 @@ jar {
     from {
         configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
     }
+    exclude ('**/*.sfd')
 }
 mainClassName = "$moduleName/kr.kro.ezcommand.MainExecutor"
 //mainClassName = "kr.kro.ezcommand.MainExecutor"
