--- a/build.gradle
+++ b/build.gradle
@@ -27,8 +27,10 @@ subprojects {
     }
 
     dependencies {
-        compile files('../libs/json-simple-1.1.1.jar')
         // compile group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
+        //compile files('../libs/json-simple-1.1.1.jar')
+        implementation 'com.google.code.gson:gson:2.8.7'
+
         implementation 'org.jetbrains:annotations:19.0.0'
         // testCompile group: 'junit', name: 'junit', version: '4.12'
         testImplementation ('junit:junit:4.12') {
